# rust-wasm-chatroom-project

./: .gitignore  README.md
src/web-socket-client/: Cargo.toml
src/web-socket-server/: Cargo.toml
src/web-socket-server/src/: main.rs
web-socket-client/src/: lib.rs
web-socket-server/resources/: chat_history.txt
