[package]
name = "yew-websocket"
version = "0.1.0"
authors = ["Cristian Davide Conte <64142998+CristianDavideConte@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
js-sys = "0.3.49"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.49"
features = [
    'Window',
    'Document',
    'HtmlDocument',
    'HtmlParagraphElement',
    'HtmlInputElement',
    'MessageEvent',
    'KeyboardEvent',
]